Fixing topcrash bug 155681 (patch from timeless@bemail.org, plus slight modification by me). Don't call methods on mDocShell if it's null. r=cbiesinger@web.de, sr=jst@netscape.com